[package]
name = "poe-featherwing"
version = "0.1.0"
authors = ["Jonathan Merriweather <Jono@merriweather.com.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.4"
w5500-hl = { version = "0.3.0", features = ["defmt", "embedded-hal"] }
